--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </button>
     </section>
   </header>
-  <section class="mt-10 grid grid-cols-1 gap-6">
+  <section class="mt-10 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
     <section class="flex flex-col bg-light-grayish-blue border-t-4 border-facebook rounded transition duration-300 dark:bg-dark-desaturated-blue">
       <article class="my-6 flex flex-col gap-7">
         <section class="flex gap-2 w-full justify-center">
@@ -119,7 +119,7 @@
   <h3 class="font-bold text-2xl mt-12 mb-7">
     Overview - Today
   </h3>
-  <section class="grid grid-cols-1 gap-y-4">
+  <section class="grid grid-cols-1 gap-y-4 sm:gap-x-8 sm:grid-cols-2">
     <article class="flex transition duration-300 flex-col gap-6 bg-light-grayish-blue rounded p-7 dark:bg-dark-desaturated-blue">
       <header class="flex justify-between">
         <h4 class="font-bold">Page Views</h4>
