fix: se arreglo un problema de diseño

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 
 <body class="font-inter text-sm px-6 py-10 relative text-dark-grayish-blue transition duration-300 dark:bg-very-dark-blue-1 dark:text-desaturated-blue">
-  <div class="bg-very-pale-blue absolute inset-0 rounded-b-3xl h-60 -z-10 transition duration-300 dark:bg-very-dark-blue-2 xl:h-[19.8125rem]"></div>
-  <header class="flex flex-col gap-3">
+  <div class="bg-very-pale-blue absolute inset-0 rounded-b-3xl h-60 -z-10 transition duration-300 dark:bg-very-dark-blue-2 xl:h-[16rem]"></div>
+  <header class="flex flex-col gap-3 xl:flex-row xl:justify-between">
     <article class="font-bold">
       <h1 class="text-2xl text-very-dark-blue dtransition duration-300 dark:text-white">
         Social Media Dashboard
       </h1>
-      <h2 class="pt-3 pb-6">
+      <h2 class="pt-3 pb-6 xl:pb-0">
         Total Followers: 23,004
       </h2>
-      <div class="h-[1px] bg-dark-grayish-blue"></div>
+      <div class="h-[1px] bg-dark-grayish-blue xl:hidden"></div>
     </article>
-    <section class="font-bold flex justify-between">
+    <section class="font-bold flex justify-between xl:items-center xl:gap-2">
       <h2>
         Dark Mode
       </h2>
