fix: se arreglo un problema con los paddins del body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Salando</title>
 </head>
 
-<body class="font-inter text-sm px-6 py-10 relative text-dark-grayish-blue transition duration-300 dark:bg-very-dark-blue-1 dark:text-desaturated-blue">
+<body class="font-inter text-sm px-6 py-10 relative text-dark-grayish-blue transition duration-300 dark:bg-very-dark-blue-1 dark:text-desaturated-blue xl:px-40">
   <div class="bg-very-pale-blue absolute inset-0 rounded-b-3xl h-60 -z-10 transition duration-300 dark:bg-very-dark-blue-2 xl:h-[16rem]"></div>
   <header class="flex flex-col gap-3 xl:flex-row xl:justify-between">
     <article class="font-bold">
