fix: se arreglo un problema con los paddins del body

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./src/css/font.css">
   <link rel="stylesheet" href="./dist/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Salando</title>
+  <title>Salando | Social Media Dashboard With Theme Switcher</title>
 </head>
 
 <body class="font-inter text-sm px-6 py-10 relative text-dark-grayish-blue transition duration-300 dark:bg-very-dark-blue-1 dark:text-desaturated-blue xl:px-40">
